--- a/index.html
+++ b/index.html
@@ -11,11 +11,11 @@
 <body>
     <main class="image-slider">    
             <figure class="image-slider__image-box">
-                <img src="./images/nature-1.webp" alt="image 1" class="image-slider__img image-slider__img--1">
-                <img src="./images/nature-2.webp" alt="image 2" class="image-slider__img image-slider__img--2">
-                <img src="./images/nature-3.webp" alt="image 3" class="image-slider__img image-slider__img--3">
-                <img src="./images/nature-4.webp" alt="image 4" class="image-slider__img image-slider__img--4">
-                <img src="./images/nature-5.webp" alt="image 5" class="image-slider__img image-slider__img--5">
+                <img src="./images/nature-1.webp" alt="image 1" class="image-slider__img">
+                <img src="./images/nature-2.webp" alt="image 2" class="image-slider__img">
+                <img src="./images/nature-3.webp" alt="image 3" class="image-slider__img">
+                <img src="./images/nature-4.webp" alt="image 4" class="image-slider__img">
+                <img src="./images/nature-5.webp" alt="image 5" class="image-slider__img">
             </figure>
         <button class="image-slider__btn image-slider__left-btn">
             <i class="fa-sharp fa-solid fa-chevron-left"></i>
@@ -31,6 +31,6 @@
             <span class="image-slider__round"></span>
         </div>
     </main>
-    <script src="./index.js" asyn></script>
+    <script src="./index.js" async></script>
 </body>
 </html>
