fix: add automatic image slider

--- a/index.html
+++ b/index.html
@@ -24,11 +24,11 @@
             <i class="fa-sharp fa-solid fa-chevron-right"></i>
         </button>
         <div class="image-slider__round-box">
-            <span class="image-slider__round image-slider__round--active"></span>
-            <span class="image-slider__round"></span>
-            <span class="image-slider__round"></span>
-            <span class="image-slider__round"></span>
-            <span class="image-slider__round"></span>
+            <button class="image-slider__round image-slider__round--active"></button>
+            <button class="image-slider__round"></button>
+            <button class="image-slider__round"></button>
+            <button class="image-slider__round"></button>
+            <button class="image-slider__round"></button>
         </div>
     </main>
     <script src="./index.js" async></script>
